--- a/login.css
+++ b/login.css
@@ -1,7 +1,8 @@
 body {
-    background-image: url(friendsBG.jpeg);
+    background-image: url(loginBG.jpg);
     background-size: cover;
     background-repeat: no-repeat;
+    overflow: auto;
 }
 
 ul {
