--- a/restaurants.css
+++ b/restaurants.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url(friendsBG.jpeg);
+    background-image: url(restaurantsBG.jpg);
     background-size: cover;
     background-repeat: no-repeat;
 }
