--- a/signUp.css
+++ b/signUp.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Numans');
+
 body {
     background-image: url(friendsBG.jpeg);
     background-size: cover;
@@ -60,5 +62,104 @@ ul {
     margin-top: 4vw;
     text-align: center;
     color: #e4a700;
-    font-style: italic;
   }
+
+  html,body{
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 100%;
+    font-family: 'Numans', sans-serif;
+    }
+    
+    .container{
+    height: 100%;
+    align-content: center;
+    }
+    
+    .card{
+    height: 420px;
+    margin-top: 5vw;
+    margin-bottom: auto;
+    width: 400px;
+    background-color: rgba(2, 62, 138, 0.7) !important;
+    }
+    
+    .social_icon span{
+    font-size: 60px;
+    margin-left: 10px;
+    color: #FFC312;
+    }
+    
+    .social_icon span:hover{
+    color: white;
+    cursor: pointer;
+    }
+    
+    .card-header h3{
+    color: white;
+    text-align: center;
+    }
+    
+    .social_icon{
+    position: absolute;
+    right: 20px;
+    top: -45px;
+    }
+    
+    .input-group-prepend span{
+    width: 50px;
+    background-color: #FFC312;
+    color: black;
+    border:0 !important;
+    }
+    
+    input:focus{
+    outline: 0 0 0 0  !important;
+    box-shadow: 0 0 0 0 !important;
+    
+    }
+    
+    .remember{
+    color: white;
+    }
+    
+    .remember input
+    {
+    width: 20px;
+    height: 20px;
+    margin-left: 15px;
+    margin-right: 5px;
+    }
+    
+    .login_btn{
+    color: black;
+    background-color: #FFC312;
+    width: 150px;
+    }
+    
+    .login_btn:hover{
+    color: black;
+    background-color: white;
+    }
+    
+    .links{
+    color: white;
+    }
+    
+    .links a{
+    margin-left: 4px;
+    }
+
+.card-footer {
+  margin-top: 0vw;
+}
+
+.form-group {
+  align-content: center;
+}
+
+/* Assuming you have a class named "center" defined in your CSS file */
+.center {
+  margin-left: 7vw;
+  background-color: whitesmoke;
+}
