Resolved a myriad of formatting issues and standardized % for positioning

--- a/login.css
+++ b/login.css
@@ -1,18 +1,18 @@
 @import url('https://fonts.googleapis.com/css?family=Numans');
 
 body {
-    background-image: url(loginBG.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    overflow: auto;
+  background-image: url(loginBG.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  overflow: auto;
 }
 
 ul {
-    list-style-type: none;
-    padding: 0;
-    overflow: hidden;
-    background-color: #023e8a;
-  }
+  list-style-type: none;
+  padding: 0;
+  overflow: hidden;
+  background-color: #023e8a;
+}
   
   li {
     float: left;
@@ -25,8 +25,7 @@ ul {
     padding: 14px 16px;
     text-decoration: none;
   }
-  
-  /* Change the link color to #111 (black) on hover */
+
   li a:hover {
     background-color: #a47e1b;
   }
@@ -52,115 +51,93 @@ ul {
   }
 
   .loginBtn {
-    margin-right: 5vw;
+    margin-right: 5%;
   }
 
   .homeBtn {
-    margin-left: 5vw;
+    margin-left: 5%;
   }
 
   .mainHeader {
-    margin-top: 4vw;
+    margin-top: 4%;
     text-align: center;
     color: #e4a700;
   }
 
-  html,body{
+  html, body {
     background-image: url('http://getwallpapers.com/wallpaper/full/a/5/d/544750.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     height: 100%;
     font-family: 'Numans', sans-serif;
+  }
+    
+    .container {
+      height: 100%;
+      align-content: center;
     }
     
-    .container{
-    height: 100%;
-    align-content: center;
+    .card {
+      height: 45%;
+      margin-top: 5%;
+      margin-bottom: auto;
+      width: 35%;
+      background-color: rgba(0,0,0,0.5) !important;
     }
     
-    .card{
-    height: 350px;
-    margin-top: 5vw;
-    margin-bottom: auto;
-    width: 400px;
-    background-color: rgba(0,0,0,0.5) !important;
+    .card-header h3 {
+      color: white;
+      text-align: center;
     }
     
-    .social_icon span{
-    font-size: 60px;
-    margin-left: 10px;
-    color: #FFC312;
+    .input-group-prepend span {
+      width: 50px;
+      background-color: #FFC312;
+      color: black;
+      border:0 !important;
     }
     
-    .social_icon span:hover{
-    color: white;
-    cursor: pointer;
+    input:focus {
+      outline: 0 0 0 0  !important;
+      box-shadow: 0 0 0 0 !important;
     }
     
-    .card-header h3{
-    color: white;
-    text-align: center;
+    .remember {
+      color: white;
     }
     
-    .social_icon{
-    position: absolute;
-    right: 20px;
-    top: -45px;
+    .remember input {
+      width: 20px;
+      height: 20px;
+      margin-left: 15px;
+      margin-right: 5px;
     }
     
-    .input-group-prepend span{
-    width: 50px;
-    background-color: #FFC312;
-    color: black;
-    border:0 !important;
+    .login_btn {
+      color: black;
+      background-color: #FFC312;
+      width: 25%;
+      margin-left: 37.5%;
+      margin-top: 7%;
     }
     
-    input:focus{
-    outline: 0 0 0 0  !important;
-    box-shadow: 0 0 0 0 !important;
-    
+    .login_btn:hover {
+      color: white;
+      background-color: black;
     }
     
-    .remember{
-    color: white;
-    }
-    
-    .remember input
-    {
-    width: 20px;
-    height: 20px;
-    margin-left: 15px;
-    margin-right: 5px;
-    }
-    
-    .login_btn{
-    color: black;
-    background-color: #FFC312;
-    width: 100px;
-    }
-    
-    .login_btn:hover{
-    color: black;
-    background-color: white;
-    }
-    
-    .links{
-    color: white;
+    .links {
+      color: white;
     }
     
     .links a{
-    margin-left: 4px;
+      margin-left: 4px;
     }
 
 .card-footer {
-  margin-top: -2vw;
+  margin-top: -7%;
 }
 
 .form-group {
   align-content: center;
-}
-
-.center {
-  margin-left: 8vw;
-  margin-top: 2vw;
 }
