--- a/friends.css
+++ b/friends.css
@@ -1,15 +1,15 @@
 body {
-    background-image: url(friendsImg.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
+  background-image: url(friendsImg.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
 ul {
-    list-style-type: none;
-    padding: 0;
-    overflow: hidden;
-    background-color: #023e8a;
-  }
+  list-style-type: none;
+  padding: 0;
+  overflow: hidden;
+  background-color: #023e8a;
+}
   
   li {
     float: left;
@@ -23,7 +23,6 @@ ul {
     text-decoration: none;
   }
   
-  /* Change the link color to #111 (black) on hover */
   li a:hover {
     background-color: #a47e1b;
   }
@@ -49,15 +48,15 @@ ul {
   }
 
   .loginBtn {
-    margin-right: 5vw;
+    margin-right: 5%;
   }
 
   .homeBtn {
-    margin-left: 5vw;
+    margin-left: 5%;
   }
 
   .mainHeader {
-    margin-top: 4vw;
+    margin-top: 4%;
     text-align: center;
     color: white;
     font-style: italic;
