--- a/signUp.css
+++ b/signUp.css
@@ -1,17 +1,17 @@
 @import url('https://fonts.googleapis.com/css?family=Numans');
 
 body {
-    background-image: url(friendsBG.jpeg);
-    background-size: cover;
-    background-repeat: no-repeat;
+  background-image: url(friendsBG.jpeg);
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
 ul {
-    list-style-type: none;
-    padding: 0;
-    overflow: hidden;
-    background-color: #023e8a;
-  }
+  list-style-type: none;
+  padding: 0;
+  overflow: hidden;
+  background-color: #023e8a;
+}
   
   li {
     float: left;
@@ -24,8 +24,7 @@ ul {
     padding: 14px 16px;
     text-decoration: none;
   }
-  
-  /* Change the link color to #111 (black) on hover */
+
   li a:hover {
     background-color: #a47e1b;
   }
@@ -51,115 +50,87 @@ ul {
   }
 
   .loginBtn {
-    margin-right: 5vw;
+    margin-right: 5%;
   }
 
   .homeBtn {
-    margin-left: 5vw;
+    margin-left: 5%;
   }
 
   .mainHeader {
-    margin-top: 4vw;
+    margin-top: 4%;
     text-align: center;
     color: #e4a700;
   }
 
-  html,body{
-    background-size: cover;
-    background-repeat: no-repeat;
-    height: 100%;
-    font-family: 'Numans', sans-serif;
-    }
+html, body {
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 100%;
+  font-family: 'Numans', sans-serif;
+}
     
-    .container{
-    height: 100%;
-    align-content: center;
-    }
+.container {
+  height: 100%;
+  align-content: center;
+}
     
-    .card{
-    height: 420px;
-    margin-top: 5vw;
+  .card {
+    height: 53%;
+    margin-top: 5%;
     margin-bottom: auto;
-    width: 400px;
+    width: 36%;
     background-color: rgba(2, 62, 138, 0.7) !important;
-    }
-    
-    .social_icon span{
-    font-size: 60px;
-    margin-left: 10px;
-    color: #FFC312;
-    }
-    
-    .social_icon span:hover{
-    color: white;
-    cursor: pointer;
-    }
-    
-    .card-header h3{
+  }
+  
+  .card-header h3 {
     color: white;
     text-align: center;
-    }
-    
-    .social_icon{
-    position: absolute;
-    right: 20px;
-    top: -45px;
-    }
-    
-    .input-group-prepend span{
-    width: 50px;
+  }
+  
+  .input-group-prepend span {
+    width: 500px;
     background-color: #FFC312;
     color: black;
     border:0 !important;
-    }
-    
-    input:focus{
+  }
+  
+  input:focus {
     outline: 0 0 0 0  !important;
     box-shadow: 0 0 0 0 !important;
-    
-    }
-    
-    .remember{
+  }
+  
+  .remember {
     color: white;
-    }
-    
-    .remember input
-    {
+  }
+  
+  .remember input {
     width: 20px;
     height: 20px;
     margin-left: 15px;
     margin-right: 5px;
-    }
-    
-    .login_btn{
+  }
+  
+  .login_btn {
     color: black;
     background-color: #FFC312;
-    width: 150px;
-    }
-    
-    .login_btn:hover{
-    color: black;
-    background-color: white;
-    }
-    
-    .links{
+    width: 40%;
+    margin-left: 29%;
+  }
+  
+  .login_btn:hover {
     color: white;
-    }
-    
-    .links a{
+    background-color: black;
+  }
+  
+  .links {
+    color: white;
+  }
+  
+  .links a {
     margin-left: 4px;
-    }
-
-.card-footer {
-  margin-top: 0vw;
-}
+  }
 
 .form-group {
   align-content: center;
-}
-
-/* Assuming you have a class named "center" defined in your CSS file */
-.center {
-  margin-left: 7vw;
-  background-color: whitesmoke;
 }
