google maps api implementation started

--- a/restaurants.css
+++ b/restaurants.css
@@ -61,3 +61,22 @@ ul {
     color: #e4a700;
     font-style: italic;
   }
+   /* 
+ * Always set the map height explicitly to define the size of the div element
+ * that contains the map. 
+ */
+ #map {
+  height: 90%;
+  width: 50%;
+  margin-left: 5%;
+}
+
+/* 
+ * Optional: Makes the sample page fill the window. 
+ */
+html,
+body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
